--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-
-//debug=true
-com.example.demo.filesystem.minimum-free-disk-space =4711
+spring.datasource.url=jdbc:mysql://localhost:3306/beaverbase
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
