--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.security.user.name=thorsten
 spring.security.user.password=tiger
+
+#ExampleProperties
+band.name=Nirvana
+singer.name=KurtCobain 
+
+#Exmaple Changes
+server.port=8085
+#old: http://localhost:8085/api/music
+server.servlet.context-path=/nevermind
+#now: http://localhost:8085/nevermind/api/music
